--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <h3><button onclick = "convert_to_percent()">%</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "divide()">/</button></h3>
+                                <h3><button onclick = "OP('div')">/</button></h3>
                             </div>
                         </div>
                         <div class = "row">
@@ -57,7 +57,7 @@
                                 <h3><button onclick = "add_to_display(3)">3</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "multiply()">*</button></h3>
+                                <h3><button onclick = "OP('mul')">*</button></h3>
                             </div>
                         </div>
                         <div class = "row">
@@ -71,7 +71,7 @@
                                 <h3><button onclick = "add_to_display(6)">6</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "subtract()">-</button></h3>
+                                <h3><button onclick = "OP('sub')">-</button></h3>
                             </div>
                         </div>
                         <div class = "row">
@@ -85,7 +85,7 @@
                                 <h3><button onclick = "add_to_display(9)">9</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add()">+</button></h3>
+                                <h3><button onclick = "OP('add')">+</button></h3>
                             </div>
                         </div>
                         <div class = "row">
