--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
             <div class = "row">
                 <div id = "display" class="row" style="height: 300px;">
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
-                        <h3 id = "last_display5" class = "input olds" style="margin: 0; opacity: 35%;"></h3>
+                        <h3 id = "last_display5" class = "input olds" style="margin: 0; opacity: 20%;"></h3>
                     </div>
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
-                        <h3 id = "last_display4" class = "input olds" style="margin: 0; opacity: 40%;"></h3>
+                        <h3 id = "last_display4" class = "input olds" style="margin: 0; opacity: 30%;"></h3>
                     </div>
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
-                        <h3 id = "last_display3" class = "input olds" style="margin: 0; opacity: 50%;"></h3>
+                        <h3 id = "last_display3" class = "input olds" style="margin: 0; opacity: 40%;"></h3>
                     </div>
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
-                        <h3 id = "last_display2" class = "input olds" style="margin: 0; opacity: 60%;"></h3>
+                        <h3 id = "last_display2" class = "input olds" style="margin: 0; opacity: 50%;"></h3>
                     </div>
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
-                        <h3 id = "last_display1" class = "input olds" style="margin: 0; opacity: 70%;"></h3>
+                        <h3 id = "last_display1" class = "input curr_rep" style="margin: 0; opacity: 60%;"></h3>
                     </div>
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
                         <h3 id = "curr_dis" class = "input curr" style="margin: 0;">Start</h3>
