--- a/index.html
+++ b/index.html
@@ -53,70 +53,70 @@
                     <div class = "numbers">
                         <div class = "row">
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "cleare()" class="Escape">AC</button></h3>
+                                <h3><button onclick = "cleare()" class="Escape non_numbs">AC</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "change_sign()"class="+/-">+/-</button></h3>
+                                <h3><button onclick = "change_sign()"class="+/- non_numbs">+/-</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "convert_to_percent()" class="%">%</button></h3>
+                                <h3><button onclick = "convert_to_percent()" class="% non_numbs">%</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('/')" class="/">/</button></h3>
+                                <h3><button onclick = "OP('/')" class="/ non_numbs">/</button></h3>
                             </div>
                         </div>
                         <div class = "row">
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(1)" class="1">1</button></h3>
+                                <h3><button onclick = "add_to_display(1)" class="1 numbs">1</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(2)" class="2">2</button></h3>
+                                <h3><button onclick = "add_to_display(2)" class="2 numbs">2</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(3)" class="3">3</button></h3>
+                                <h3><button onclick = "add_to_display(3)" class="3 numbs">3</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('*')" class="*">*</button></h3>
+                                <h3><button onclick = "OP('*')" class="* non_numbs">*</button></h3>
                             </div>
                         </div>
                         <div class = "row">
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(4)" class="4">4</button></h3>
+                                <h3><button onclick = "add_to_display(4)" class="4 numbs">4</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(5)" class="5">5</button></h3>
+                                <h3><button onclick = "add_to_display(5)" class="5 numbs">5</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(6)" class="6">6</button></h3>
+                                <h3><button onclick = "add_to_display(6)" class="6 numbs">6</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('-')" class="-">-</button></h3>
+                                <h3><button onclick = "OP('-')" class="- non_numbs">-</button></h3>
                             </div>
                         </div>
                         <div class = "row">
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(7)" class="7">7</button></h3>
+                                <h3><button onclick = "add_to_display(7)" class="7 numbs">7</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(8)" class="8">8</button></h3>
+                                <h3><button onclick = "add_to_display(8)" class="8 numbs">8</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display(9)" class="9">9</button></h3>
+                                <h3><button onclick = "add_to_display(9)" class="9 numbs">9</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('+')" class="+">+</button></h3>
+                                <h3><button onclick = "OP('+')" class="+ non_numbs">+</button></h3>
                             </div>
                         </div>
                         <div class = "row">
                             <div class="nbtn col col-m-3 col-t-3 col-d-3" >
-                                <h3><button onclick = "add_to_display(0)" class="0">0</button></h3>
+                                <h3><button onclick = "add_to_display(0)" class="0 numbs">0</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "decimal()" class=".">.</button></h3>
+                                <h3><button onclick = "decimal()" class=". numbs">.</button></h3>
                             </div>
                            
                             <div class="nbtn col col-m-6 col-t-6 col-d-6">
-                                <h3 class = h3Enter><button onclick = "calculate()" class="= Enter">Enter</button></h3>
+                                <h3 class = h3Enter><button onclick = "calculate()" class="= Enter non_numbs" id = "enter">Enter</button></h3>
                             </div>
                         </div>
                         
