--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             </div>
                            
                             <div class="nbtn col col-m-6 col-t-6 col-d-6">
-                                <h3 class = h3Enter><button onclick = "calculate()" class="= Enter non_numbs" id = "enter">Enter</button></h3>
+                                <h3 class = h3Enter><button onclick = "calculate()" class="= Enter non_numbs enter">Enter</button></h3>
                             </div>
                         </div>
                         
