--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class = "numbers">
                         <div class = "row">
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "cleare()" class="Escape non_numbs">AC</button></h3>
+                                <h3><button onclick = "cleare()" class="Escape non_numbs">C</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
                                 <h3><button onclick = "change_sign()"class="+/- non_numbs">+/-</button></h3>
