--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <h3><button onclick = "change_sign()"class="+/- non_numbs">+/-</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "convert_to_percent()" class="% non_numbs">%</button></h3>
+                                <h3><button onclick = "OP('^')" class="^ non_numbs">^</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
                                 <h3><button onclick = "OP('/')" class="/ non_numbs">/</button></h3>
