--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <h3 id = "last_display1" class = "input curr_rep" style="margin: 0; opacity: 60%;"></h3>
                     </div>
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
-                        <h3 id = "curr_dis" class = "input curr" style="margin: 0;">Start</h3>
+                        <h3 id = "curr_dis" class = "input curr" style="margin: 0;">Start</h3>                    
                     </div>
                 </div>
                 <div class="col col-m-12 col-t-12 col-d-12">
@@ -119,7 +119,20 @@
                                 <h3 class = h3Enter><button onclick = "calculate()" class="= Enter non_numbs enter">Enter</button></h3>
                             </div>
                         </div>
-                        
+                        <div class = "row">
+                            <div class="end nbtn col col-m-3 col-t-3 col-d-3">
+                                <h3><button onclick = "off()" class="q non_numbs">Off</button></h3>
+                            </div>
+                            <div class="nbtn col col-m-3 col-t-3 col-d-3">
+                                <h3><button onclick = "sqrt()" class="s non_numbs">√</button></h3>
+                            </div>
+                            <div class="nbtn col col-m-3 col-t-3 col-d-3">
+                                <h3><button onclick = "add_to_display('pi')" class="p non_numbs">π</button></h3>
+                            </div>
+                            <div class="nbtn col col-m-3 col-t-3 col-d-3">
+                                <h3><button  onclick = "Delete()" class="Backspace non_numbs">⌫</button></h3>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
