--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                                 <h3><button onclick = "off()" class="q non_numbs">Off</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "sqrt()" class="s non_numbs">√</button></h3>
+                                <h3><button onclick = "graph()" class="G non_numbs">G</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "add_to_display('pi')" class="p non_numbs">π</button></h3>
+                                <h3><button onclick = "sqrt()" class="s non_numbs">√</button></h3>
                             </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
                                 <h3><button  onclick = "Delete()" class="Backspace non_numbs">⌫</button></h3>
