--- a/graphing.html
+++ b/graphing.html
@@ -26,11 +26,8 @@
                 </div>
             </div>
             <div class = "row numbers">
-                <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                    <h3><button class="q non_numbs"><a class="non_numbs" href="index.html" style="text-decoration: none;">Off</a></button></h3>
-                </div>
-                <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                    <h3><button class="C non_numbs">C</button></h3>
+                <div class="end nbtn col col-m-6 col-t-6 col-d-6">
+                    <h3><button class="q non_numbs Graph"><a class="non_numbs" href="index.html" style="text-decoration: none;">Back</a></button></h3>
                 </div>
                 <div class="nbtn col col-m-6 col-t-6 col-d-6">
                     <h3><button class="Graph non_numbs" id = "enter">Enter</button></h3>
