--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
                                 <h3><button onclick = "OP('^')" class="^ non_numbs">^</button></h3>
                             </div>
-                            <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('/')" class="/ non_numbs">/</button></h3>
+                            <div class="nbtn col col-m-3 col-t-3 col-d-3">
+                                <h3><button  onclick = "Delete()" class="Backspace non_numbs">⌫</button></h3>
                             </div>
                         </div>
                         <div class = "row">
@@ -76,7 +76,7 @@
                                 <h3><button onclick = "add_to_display(9)" class="9 numbs">9</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('*')" class="* non_numbs">*</button></h3>
+                                <h3><button onclick = "OP('/')" class="/ non_numbs">/</button></h3>
                             </div>
                         </div>
                         <div class = "row">
@@ -90,7 +90,7 @@
                                 <h3><button onclick = "add_to_display(6)" class="6 numbs">6</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('-')" class="- non_numbs">-</button></h3>
+                                <h3><button onclick = "OP('*')" class="* non_numbs">*</button></h3>
                             </div>
                         </div>
                         <div class = "row">
@@ -104,7 +104,7 @@
                                 <h3><button onclick = "add_to_display(3)" class="3 numbs">3</button></h3>
                             </div>
                             <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "OP('+')" class="+ non_numbs">+</button></h3>
+                                <h3><button onclick = "OP('-')" class="- non_numbs">-</button></h3>
                             </div>
                         </div>
                         <div class = "row">
@@ -114,23 +114,19 @@
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
                                 <h3><button onclick = "decimal()" class=". numbs">.</button></h3>
                             </div>
-                           
-                            <div class="nbtn col col-m-6 col-t-6 col-d-6">
-                                <h3 class = h3Enter><button onclick = "calculate()" class="= Enter non_numbs enter">Enter</button></h3>
-                            </div>
-                        </div>
-                        <div class = "row">
-                            <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button onclick = "off()" class="q non_numbs">Off</button></h3>
-                            </div>
-                            <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button class="g non_numbs"><a class="non_numbs" href="graphing.html" style="text-decoration: none;">G</a></button></h3>
-                            </div>
                             <div class="nbtn col col-m-3 col-t-3 col-d-3">
                                 <h3><button onclick = "sqrt()" class="s non_numbs">√</button></h3>
                             </div>
-                            <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                                <h3><button  onclick = "Delete()" class="Backspace non_numbs">⌫</button></h3>
+                            <div class="end nbtn col col-m-3 col-t-3 col-d-3">
+                                <h3><button onclick = "OP('+')" class="+ non_numbs">+</button></h3>
+                            </div>
+                        </div>
+                        <div class = "row">
+                            <div class="nbtn col col-m-6 col-t-6 col-d-6">
+                                <h3><button class="non_numbs enter"><a class="non_numbs" href="graphing.html" style="text-decoration: none;">Graph</a></button></h3>
+                            </div>
+                            <div class="nbtn col col-m-6 col-t-6 col-d-6">
+                                <h3><button onclick = "calculate()" class="= Enter non_numbs enter">Enter</button></h3>
                             </div>
                         </div>
                     </div>
