changed features of graph

--- a/graphing.html
+++ b/graphing.html
@@ -20,18 +20,16 @@
                     </div>
                 </div>
             </div>
-            <div class = "row">
+            <!-- <div class = "row">
                 <div class="nbtn col col-m-12 col-t-12 col-d-12">
                     <input id = "equation" style="width: 85%; font-weight: 600; font-size: large;" type="text" name=""  placeholder="Enter Equation" autocomplete="off">              
                 </div>
-            </div>
+            </div> -->
             <div class = "row numbers">
                 <div class="end nbtn col col-m-6 col-t-6 col-d-6">
-                    <h3><button class="q non_numbs Graph"><a class="non_numbs" href="index.html" style="text-decoration: none;">Back</a></button></h3>
+                    <h3><button class="q non_numbs Graph"><a class="non_numbs" href="index.html" style="text-decoration: none;">Return</a></button></h3>
                 </div>
-                <div class="nbtn col col-m-6 col-t-6 col-d-6">
-                    <h3><button class="Graph non_numbs" id = "enter">Enter</button></h3>
-                </div>
+    
             </div>
             </div>
         </div>
