--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             </div>
         </div>
     </div>
-    <iframe style="width: 100%;height: 100%;" src="graphing.html" frameborder="0"></iframe>
     <!--  Container -->
-    <div class="calculator container vertical-center">
-        <div class = "fw"> 
+    <div class="container vertical-center" style="display: flex;">
+        <div class = "calculator fw"> 
             <div class = "row">
                 <div id = "display" class="row" style="height: 300px;">
                     <div class="input nbtn col col-m-12 col-t-12 col-d-12">
@@ -123,60 +122,41 @@
                         </div>
                         <div class = "row">
                             <div class="nbtn col col-m-6 col-t-6 col-d-6">
-                                <h3><button class="non_numbs enter"><a class="non_numbs" href="graphing.html" style="text-decoration: none;">Graph</a></button></h3>
+                                <h3><button onclick = "G()" class="non_numbs enter">Graph</button></h3>
                             </div>
                             <div class="nbtn col col-m-6 col-t-6 col-d-6">
                                 <h3><button onclick = "calculate()" class="= Enter non_numbs enter">Enter</button></h3>
                             </div>
                         </div>
                     </div>
-
                 </div>
-  
-                    <!-- <div class = "row">
-                        <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete('√')" id = "buttonIncomplete">√</button></h3>
-                        </div>
-                        <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete('ln')" id = "buttonIncomplete">ln</button></h3>
-                        </div>
-                        <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete('e')" id = "buttonIncomplete">e</button></h3>
-                        </div>
-                        <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete('x²')" id = "buttonIncomplete">x²</button></h3>
-                        </div>
+            </div>
+        </div>
+
+        <!--  Graph -->
+        <div class = "Graphing fw" id = "erase" style = "border-top-left-radius: 0%; border-top-right-radius: 0%;"> 
+            <div class = "row">
+                <div id = "Gdisplay" class="row" style="height: 525px;">
+                    <div class="nbtn col col-m-12 col-t-12 col-d-12" style="height: 100%; width: 100%;">
+                        <div id = "desmos"></div>               
                     </div>
-                    <div class = "row">
-                        <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete('(')" id = "buttonIncomplete">(</button></h3>
-                        </div>
-                        <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete(')')" id = "buttonIncomplete">)</button></h3>
-                        </div>
-                        <div class="nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete('π')" id = "buttonIncomplete">π</button></h3>
-                        </div>
-                        <div class="end nbtn col col-m-3 col-t-3 col-d-3">
-                            <h3><button onclick = "incomplete('log')" id = "buttonIncomplete">log</button></h3>
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="end nbtn col col-m-6 col-t-6 col-d-6">
-                            <h3 style="margin-left: 0px;"><button onclick = "Delete('Backspace')" class="Backspace" style="font-size: 28px;">backspace</button></h3>
-                        </div>
-                        <div class="end nbtn col col-m-6 col-t-6 col-d-6">
-                            <h3><button onclick = "incomplete('rand')" id = "buttonIncomplete" style="font-size: 28px;">ran</button></h3>
-                        </div>
-                    </div> -->
+                </div>
+            </div>
+            <div class = "row numbers">
+                <div class="end nbtn col col-m-6 col-t-6 col-d-6">
+                    <h3 class="Gh3"><button onclick = "return_to_calc()" class="q non_numbs Graph">Return</button></h3>
+                </div>
+            </div>
             </div>
         </div>
     </div>
+
+    
+    <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
     <script src = "jquery.min.js"></script>
     <script src = "jquery.validate.js"></script>
     <script src="keys.js"></script>
     <script src="calc.js"></script>
-    <script src = "graphing.js"></script>
     
 </body>
 </html>
